--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ jobs:
       - run:
           name: Install Cilantro Requirements
           command: |
-             pip install -r requirements.txt
+             pip install -r requirements.txt --upgrade --no-cache-dir --exists-action w
              sudo apt install -y mysql-client
 
 #      # This should go into custom primary image, here's only for the sake of explanation
