--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,7 @@ jobs:
           username: 'root'
           password: ''
           database: 'seneca_test'
+          MYSQL_ROOT_HOST: 127.0.0.1
 #      - image: circleci/mysql:5.7
 #        environment:
 #          MYSQL_ALLOW_EMPTY_PASSWORD: yes
