--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,16 +4,10 @@ jobs:
     working_directory: ~/cilantro
     docker:
       - image: circleci/python:3.6.5
-      - image: lamdencalrissian/seneca-myrocks-test
+      - image: circleci/mysql:5.7
         environment:
-          username: 'root'
-          password: ''
-          database: 'seneca_test'
-          MYSQL_ROOT_HOST: 127.0.0.1
-#      - image: circleci/mysql:5.7
-#        environment:
-#          MYSQL_ALLOW_EMPTY_PASSWORD: yes
-#          MYSQL_ROOT_PASSWORD: ""
+          MYSQL_ALLOW_EMPTY_PASSWORD: yes
+          MYSQL_ROOT_PASSWORD: ""
 
     steps:
       - checkout
