try with secure_file_priv=

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,8 @@ jobs:
         environment:
           MYSQL_ALLOW_EMPTY_PASSWORD: yes
           MYSQL_ROOT_PASSWORD: ""
+          secure_file_priv: ""
+          SECURE_FILE_PRIV: ""
 
     steps:
       - checkout
