--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,6 +27,7 @@ jobs:
           command: |
              sudo apt install -y mysql-client
              sudo mkdir /var/lib/mysql-files
+             sudo chmod 777 /var/lib/mysql-files
 
 #      # This should go into custom primary image, here's only for the sake of explanation
 #      - run:
