--- a/requirements.txt
+++ b/requirements.txt
@@ -24,4 +24,4 @@ yarl==1.1.0
 wheel
 
 -e git://github.com/Lamden/vmnet.git#egg=vmnet
--e git://github.com/Lamden/seneca.git#egg=seneca
+-e git://github.com/Lamden/seneca.git@stable#egg=seneca
