--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,11 @@ jobs:
           name: Install Cilantro Requirements
           command: |
              pip install -r requirements.txt --upgrade --no-cache-dir --exists-action w
-             make update-submodules
+
+      - run:
+          name: Install Git Submodules
+          command: |
+              make update-submodules
 
       - run:
           name: Install Mysql Client
