Revert "Merge pull request #190 from Lamden/git-submodules"
This reverts commit cad0e281f691d16fb42f50969a410259db0c86db, reversing
changes made to 3bd44e4ee56ebd2ddbda418cdd5cad2673283b3a.

--- a/.gitignore
+++ b/.gitignore
@@ -29,10 +29,11 @@ cilantro/protocol/networks/data
 certs
 tests/vmnet/docker-compose.yml
 .DS_Store
+certs
 state.tmp
+seneca
 **/profiles/**
 **/tmp_exec_code*.py
-db_conf.ini
 
 # Docker
 docker-compose.yml
