--- a/requirements.txt
+++ b/requirements.txt
@@ -21,3 +21,6 @@ urllib3==1.22
 uvloop==0.9.1
 yarl==1.1.0
 wheel
+
+-e git://github.com/Lamden/vmnet.git#egg=vmnet
+-e git://github.com/Lamden/seneca.git#egg=seneca
