updated circle ci config to check for injected seneca branch, and install it if exists. also, switched to last known working seneca version in requirements.txt so i can merge this into master

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,6 +57,16 @@ jobs:
             - "/usr/local/lib/python3.6/site-packages"
 
       - run:
+          name: Check for Custom Seneca Branch Injected by REST API
+          command: |
+            if [ -z "$SENECA_BRANCH" ]; then
+              echo "SENECA_BRANCH env variable is not set"
+            else
+              echo "SENECA_BRANCH is set to $SENECA_BRANCH"
+              pip3 install git+https://github.com/Lamden/seneca.git@$SENECA_BRANCH#egg=seneca --no-cache-dir --upgrade
+            fi
+
+      - run:
           name: Wait For mysqld
           command: |
             dockerize -wait tcp://localhost:3306 -timeout 1m
