--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,8 +18,8 @@ jobs:
       - run:
           name: Install Cilantro Requirements
           command: |
-             pip install -r requirements.txt --upgrade --no-cache-dir --exists-action w
-             pip install -r dev-requirements.txt --upgrade --no-cache-dir --exists-action w
+             pip3 install -r requirements.txt --upgrade --no-cache-dir --exists-action w
+             pip3 install -r dev-requirements.txt --upgrade --no-cache-dir --exists-action w
 
       - run:
           name: Install Mysql Client
