--- a/requirements.txt
+++ b/requirements.txt
@@ -9,10 +9,10 @@ mysqlclient==1.3.12
 ntplib==0.3.3
 pycapnp==0.6.3
 PyMySQL==0.8.0
-PyNaCl==1.2.1
+#PyNaCl==1.2.1
 pytest==3.5.0
 pytest-aiohttp==0.3.0
-pyzmq==17.0.0
+#pyzmq==17.0.0
 rpcudp==3.0.0
 requests==2.18.4
 six==1.11.0
