--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,24 +26,24 @@ jobs:
           command: |
              sudo apt install -y mysql-client
 
-#      # This should go into custom primary image, here's only for the sake of explanation
-#      - run:
-#          name: Install Docker client
-#          command: |
-#            set -x
-#            VER="17.03.0-ce"
-#            curl -L -o /tmp/docker-$VER.tgz https://get.docker.com/builds/Linux/x86_64/docker-$VER.tgz
-#            tar -xz -C /tmp -f /tmp/docker-$VER.tgz
-#            mv /tmp/docker/* /usr/bin
-#      # This should go into custom primary image, here's only for the sake of explanation
-#      - run:
-#          name: Install Docker Compose
-#          command: |
-#            curl -L https://github.com/docker/compose/releases/download/1.19.0/docker-compose-`uname -s`-`uname -m` > ~/docker-compose
-#            chmod +x ~/docker-compose
-#            sudo mv ~/docker-compose /usr/local/bin/docker-compose
-#
-#      - setup_remote_docker
+      # This should go into custom primary image, here's only for the sake of explanation
+      - run:
+          name: Install Docker client
+          command: |
+            set -x
+            VER="17.03.0-ce"
+            curl -L -o /tmp/docker-$VER.tgz https://get.docker.com/builds/Linux/x86_64/docker-$VER.tgz
+            tar -xz -C /tmp -f /tmp/docker-$VER.tgz
+            mv /tmp/docker/* /usr/bin
+      # This should go into custom primary image, here's only for the sake of explanation
+      - run:
+          name: Install Docker Compose
+          command: |
+            curl -L https://github.com/docker/compose/releases/download/1.19.0/docker-compose-`uname -s`-`uname -m` > ~/docker-compose
+            chmod +x ~/docker-compose
+            sudo mv ~/docker-compose /usr/local/bin/docker-compose
+
+      - setup_remote_docker
 
       - run:
           name: set temp credentials file (aka db config stuff)
@@ -76,7 +76,7 @@ jobs:
           command: |
             export PYTHONPATH=$PYTHONPATH:~/cilantro
             export LOCAL_PATH=~
-            python3.6 ~/cilantro/tests/run_tests.py --integration 0
+            python3.6 ~/cilantro/tests/run_tests.py --integration 1 --unit 0
 
       - store_artifacts:
           path: test-results
