--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,7 @@ jobs:
     working_directory: ~/cilantro
     docker:
       - image: circleci/python:3.6.5
+      - image: lamden/cilantro
       - image: lamden/cilantro-db
         environment:
           username: cilantro_user
