--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,6 +2,7 @@ version: 2
 jobs:
   build:
     working_directory: ~/cilantro
+    machine: true
     docker:
       - image: circleci/python:3.6.5
       - image: lamden/cilantro
@@ -27,24 +28,24 @@ jobs:
           command: |
              sudo apt install -y mysql-client
 
-      # This should go into custom primary image, here's only for the sake of explanation
-      - run:
-          name: Install Docker client
-          command: |
-            set -x
-            VER="18.03.1-ce"
-            curl -L -o /tmp/docker-$VER.tgz https://download.docker.com/linux/static/stable/x86_64/docker-$VER.tgz
-            tar -xz -C /tmp -f /tmp/docker-$VER.tgz
-            sudo mv /tmp/docker/* /usr/bin
-      # This should go into custom primary image, here's only for the sake of explanation
-      - run:
-          name: Install Docker Compose
-          command: |
-            curl -L https://github.com/docker/compose/releases/download/1.21.1/docker-compose-`uname -s`-`uname -m` > ~/docker-compose
-            chmod +x ~/docker-compose
-            sudo mv ~/docker-compose /usr/local/bin/docker-compose
-
-      - setup_remote_docker
+      # # This should go into custom primary image, here's only for the sake of explanation
+      # - run:
+      #     name: Install Docker client
+      #     command: |
+      #       set -x
+      #       VER="18.03.1-ce"
+      #       curl -L -o /tmp/docker-$VER.tgz https://download.docker.com/linux/static/stable/x86_64/docker-$VER.tgz
+      #       tar -xz -C /tmp -f /tmp/docker-$VER.tgz
+      #       sudo mv /tmp/docker/* /usr/bin
+      # # This should go into custom primary image, here's only for the sake of explanation
+      # - run:
+      #     name: Install Docker Compose
+      #     command: |
+      #       curl -L https://github.com/docker/compose/releases/download/1.21.1/docker-compose-`uname -s`-`uname -m` > ~/docker-compose
+      #       chmod +x ~/docker-compose
+      #       sudo mv ~/docker-compose /usr/local/bin/docker-compose
+      #
+      # - setup_remote_docker
 
       - run:
           name: set temp credentials file (aka db config stuff)
