--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,8 @@ jobs:
   build:
     working_directory: ~/cilantro
     machine: true
+    macos:
+      xcode: "9.0"
     docker:
       - image: circleci/python:3.6.5
       - image: lamden/cilantro
