--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,13 +5,14 @@ jobs:
     machine: true
     macos:
         xcode: "9.0"
-      # - image: circleci/python:3.6.5
-      # - image: lamden/cilantro
-      # - image: lamden/cilantro-db
-    environment:
-      username: cilantro_user
-      password: buttcoins
-      database: cilantro_dev
+    docker:
+      - image: circleci/python:3.6.5
+      - image: lamden/cilantro
+      - image: lamden/cilantro-db
+        environment:
+          username: cilantro_user
+          password: buttcoins
+          database: cilantro_dev
     steps:
       - checkout
       - run: sudo chown -R circleci:circleci /usr/local/bin
