--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,7 +44,8 @@ jobs:
             chmod +x ~/docker-compose
             sudo mv ~/docker-compose /usr/local/bin/docker-compose
 
-      # - setup_remote_docker
+      - setup_remote_docker:
+          version: 18.03.1-ce
 
       - run:
           name: set temp credentials file (aka db config stuff)
