--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,14 +1,18 @@
 version: 2
 jobs:
   build:
-    machine: true
-      - image: circleci/python:3.6.5
-      - image: lamden/cilantro
-      - image: lamden/cilantro-db
-        environment:
-          username: cilantro_user
-          password: buttcoins
-          database: cilantro_dev
+    machine:
+        python:
+            version: 3.6.0
+    # working_directory: ~/cilantro
+    # docker:
+    #   - image: circleci/python:3.6.5
+    #   - image: lamden/cilantro
+    #   - image: lamden/cilantro-db
+    #     environment:
+    #       username: cilantro_user
+    #       password: buttcoins
+    #       database: cilantro_dev
     steps:
       - checkout
       - run: sudo chown -R circleci:circleci /usr/local/bin
