--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,7 @@
 version: 2
 jobs:
   build:
-    machine:
-        python:
-            version: 3.6.0
+    machine: true
     # working_directory: ~/cilantro
     # docker:
     #   - image: circleci/python:3.6.5
@@ -15,6 +13,7 @@ jobs:
     #       database: cilantro_dev
     steps:
       - checkout
+      - run: pyenv install 3.6.3
       - run: sudo chown -R circleci:circleci /usr/local/bin
       - run: sudo chown -R circleci:circleci /usr/local/lib/python3.6/site-packages
       - restore_cache:
