--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,8 +15,8 @@ jobs:
     steps:
       - checkout
       - run: sudo chown -R circleci:circleci /usr/local/bin
-      - restore_cache:
-          key: cilantro-{{ .Branch }}-{{ checksum "requirements.txt" }}
+      # - restore_cache:
+      #     key: cilantro-{{ .Branch }}-{{ checksum "requirements.txt" }}
       - run: pyenv install 3.6.3
       - run: pyenv local 3.6.3
       - run:
