--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,22 +4,14 @@ jobs:
     machine:
         image: circleci/classic:201808-01
     working_directory: ~/cilantro
-    # docker:
-    #   - image: circleci/python:3.6.5
-    #   - image: lamden/cilantro
-    #   - image: lamden/cilantro-db
-    #     environment:
-    #       username: cilantro_user
-    #       password: buttcoins
-    #       database: cilantro_dev
     steps:
       - checkout
       - run: sudo chown -R circleci:circleci /usr/local/bin
+      - run: sudo chown -R circleci:circleci /opt/circleci/.pyenv/versions/3.6.5/lib/python3.6/site-packages
       # - restore_cache:
       #     key: cilantro-{{ .Branch }}-{{ checksum "requirements.txt" }}
       - run: docker pull lamden/cilantro-db
-      - run: pyenv install 3.6.3
-      - run: pyenv local 3.6.3
+      - run: pyenv local 3.6.5
       - run: export PYTHONPATH=~/cilantro
       - run:
           name: Install Cilantro Requirements
@@ -32,26 +24,6 @@ jobs:
           command: |
              sudo apt install -y mysql-client
 
-      # # This should go into custom primary image, here's only for the sake of explanation
-      # - run:
-      #     name: Install Docker client
-      #     command: |
-      #       set -x
-      #       VER="18.03.1-ce"
-      #       curl -L -o /tmp/docker-$VER.tgz https://download.docker.com/linux/static/stable/x86_64/docker-$VER.tgz
-      #       tar -xz -C /tmp -f /tmp/docker-$VER.tgz
-      #       sudo mv /tmp/docker/* /usr/bin
-      # This should go into custom primary image, here's only for the sake of explanation
-      # - run:
-      #     name: Install Docker Compose
-      #     command: |
-      #       curl -L https://github.com/docker/compose/releases/download/1.21.1/docker-compose-`uname -s`-`uname -m` > ~/docker-compose
-      #       chmod +x ~/docker-compose
-      #       sudo mv ~/docker-compose /usr/local/bin/docker-compose
-      #
-      # - setup_remote_docker:
-      #     version: 18.03.1-ce
-
       - run:
           name: set temp credentials file (aka db config stuff)
           command: |
@@ -61,7 +33,7 @@ jobs:
           key: cilantro-{{ .Branch }}-{{ checksum "requirements.txt" }}
           paths:
             - "/usr/local/bin"
-            - "/usr/local/lib/python3.6/site-packages"
+            - "/opt/circleci/.pyenv/versions/3.6.5/lib/python3.6/site-packages"
 
       - run:
           name: Check for Custom Seneca Branch Injected by REST API
@@ -76,7 +48,7 @@ jobs:
       - run:
           name: Wait For mysqld
           command: |
-            dockerize -wait tcp://localhost:3306 -timeout 1m
+            make start-db
 
       - run:
           name: Run Tests
