--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,6 @@ jobs:
       #     key: cilantro-{{ .Branch }}-{{ checksum "requirements.txt" }}
       - run: docker pull lamden/cilantro-db
       - run: pyenv local 3.6.5
-      - run: export PYTHONPATH=~/cilantro
       - run:
           name: Install Cilantro Requirements
           command: |
@@ -23,6 +22,15 @@ jobs:
           name: Install Mysql Client
           command: |
              sudo apt install -y mysql-client
+
+      - run:
+          name: Install Docker client
+          command: |
+            set -x
+            VER="18.03.1-ce"
+            curl -L -o /tmp/docker-$VER.tgz https://download.docker.com/linux/static/stable/x86_64/docker-$VER.tgz
+            tar -xz -C /tmp -f /tmp/docker-$VER.tgz
+            sudo mv /tmp/docker/* /usr/bin
 
       - run:
           name: set temp credentials file (aka db config stuff)
