the exact version is needed anyways

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,8 +8,8 @@ jobs:
       - checkout
       - run: sudo chown -R circleci:circleci /usr/local/bin
       - run: sudo chown -R circleci:circleci /opt/circleci/.pyenv/versions/3.6.5/lib/python3.6/site-packages
-      # - restore_cache:
-      #     key: cilantro-{{ .Branch }}-{{ checksum "requirements.txt" }}
+      - restore_cache:
+          key: cilantro-{{ .Branch }}-{{ checksum "requirements.txt" }}
       - run: docker pull lamden/cilantro-db
       - run: pyenv local 3.6.5
       - run:
@@ -31,6 +31,13 @@ jobs:
             curl -L -o /tmp/docker-$VER.tgz https://download.docker.com/linux/static/stable/x86_64/docker-$VER.tgz
             tar -xz -C /tmp -f /tmp/docker-$VER.tgz
             sudo mv /tmp/docker/* /usr/bin
+
+     - run:
+         name: Install Docker Compose
+         command: |
+           curl -L https://github.com/docker/compose/releases/download/1.19.0/docker-compose-`uname -s`-`uname -m` > ~/docker-compose
+           chmod +x ~/docker-compose
+           sudo mv ~/docker-compose /usr/local/bin/docker-compose
 
       - run:
           name: set temp credentials file (aka db config stuff)
