--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
 version: 2
 jobs:
-  build:
+  integration_tests:
     machine:
         image: circleci/classic:201808-01
     working_directory: ~/cilantro
@@ -51,16 +51,6 @@ jobs:
             - "/opt/circleci/.pyenv/versions/3.6.5/lib/python3.6/site-packages"
 
       - run:
-          name: Check for Custom Seneca Branch Injected by REST API
-          command: |
-            if [ -z "$SENECA_BRANCH" ]; then
-              echo "SENECA_BRANCH env variable is not set"
-            else
-              echo "SENECA_BRANCH is set to $SENECA_BRANCH"
-              pip3 install git+https://github.com/Lamden/seneca.git@$SENECA_BRANCH#egg=seneca --no-cache-dir --upgrade
-            fi
-
-      - run:
           name: Wait For mysqld
           command: |
             make start-db
@@ -72,6 +62,53 @@ jobs:
             export LOCAL_PATH=~
             python3.6 ~/cilantro/tests/run_tests.py --integration 1 --unit 0
 
-      - store_artifacts:
-          path: test-results
-          destination: tr1
+  unit_tests:
+    working_directory: ~/cilantro
+    docker:
+      - image: circleci/python:3.6.5
+      - image: lamden/cilantro-db
+        environment:
+          username: cilantro_user
+          password: buttcoins
+          database: cilantro_dev
+    steps:
+      - checkout
+      - run: sudo chown -R circleci:circleci /usr/local/bin
+      - run: sudo chown -R circleci:circleci /usr/local/lib/python3.6/site-packages
+      - restore_cache:
+          key: cilantro-{{ .Branch }}-{{ checksum "requirements.txt" }}
+      - run:
+          name: Install Cilantro Requirements
+          command: |
+             pip3 install -r requirements.txt --upgrade --no-cache-dir --exists-action w
+             pip3 install -r dev-requirements.txt --upgrade --no-cache-dir --exists-action w
+      - run:
+          name: Install Mysql Client
+          command: |
+             sudo apt install -y mysql-client
+      - run:
+          name: set temp credentials file (aka db config stuff)
+          command: |
+             ./scripts/make_test_config.py --password buttcoins --username cilantro_user --database cilantro_dev --hostname 127.0.0.1
+      - save_cache:
+          key: cilantro-{{ .Branch }}-{{ checksum "requirements.txt" }}
+          paths:
+            - "/usr/local/bin"
+            - "/usr/local/lib/python3.6/site-packages"
+      - run:
+          name: Wait For mysqld
+          command: |
+            dockerize -wait tcp://localhost:3306 -timeout 1m
+      - run:
+          name: Run Tests
+          command: |
+            export PYTHONPATH=$PYTHONPATH:~/cilantro
+            export LOCAL_PATH=~
+            python3.6 ~/cilantro/tests/run_tests.py --integration 0
+
+workflows:
+  version: 2
+  build_and_test_cilantro:
+    jobs:
+      - integration_tests
+      - unit_tests
