--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ jobs:
       - run: sudo chown -R circleci:circleci /opt/circleci/.pyenv/versions/3.6.5/lib/python3.6/site-packages
       - restore_cache:
           key: cilantro-{{ checksum "requirements.txt" }}-{{ checksum "dev-requirements.txt" }}-integration
-      - run: sudo killall apt apt-get
+      - run: sudo pkill apt* 2>/dev/null
       - run: sudo apt install libmysqlclient-dev
       - run: pyenv local 3.6.5
       - run:
