--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,17 +9,17 @@ jobs:
       - checkout
       - run: sudo chown -R circleci:circleci /usr/local/bin
       - run: sudo chown -R circleci:circleci /opt/circleci/.pyenv/versions/3.6.5/lib/python3.6/site-packages
-      - run: sudo apt install libmysqlclient-dev
       - restore_cache:
           key: cilantro-{{ checksum "requirements.txt" }}-{{ checksum "dev-requirements.txt" }}-integration
+      - run:
+          name: Overcome CircleCI pkg lock bug
+          command: |
+            sudo rm /var/lib/apt/lists/lock
+            sudo rm /var/cache/apt/archives/lock
+            sudo rm /var/lib/dpkg/lock
+            sudo dpkg --configure -a
       - run: pyenv local 3.6.5
-      # - run:
-      #     name: Overcome CircleCI pkg lock bug
-      #     command: |
-      #       sudo rm /var/lib/apt/lists/lock
-      #       sudo rm /var/cache/apt/archives/lock
-      #       sudo rm /var/lib/dpkg/lock
-      #       sudo dpkg --configure -a
+      - run: sudo apt install libmysqlclient-dev
       - run:
           name: Install Cilantro Requirements
           command: |
