more fix for ironhouse tests

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,6 +11,13 @@ jobs:
       - restore_cache:
           key: cilantro-{{ checksum "requirements.txt" }}-{{ checksum "dev-requirements.txt" }}-integration
       - run: pyenv local 3.6.5
+      - run:
+          name: Overcome CircleCI pkg lock bug
+          command: |
+            sudo rm /var/lib/apt/lists/lock
+            sudo rm /var/cache/apt/archives/lock
+            sudo rm /var/lib/dpkg/lock
+            sudo dpkg --configure -a
       - run: sudo apt install libmysqlclient-dev
       - run:
           name: Install Cilantro Requirements
