--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -99,7 +99,9 @@ jobs:
           command: |
             export PYTHONPATH=$PYTHONPATH:~/cilantro
             export LOCAL_PATH=~
-            python3.6 -m unittest $(circleci tests glob tests/unit/**/**/**/test_*.py | circleci tests split)
+            python3.6 -m unittest $(circleci tests glob tests/unit/**/**/**/test_*.py | circleci tests split --split-by=timings)
+      - store_test_results:
+          path: unit-test-results
 
 workflows:
   version: 2
