--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -100,6 +100,8 @@ jobs:
             export PYTHONPATH=$PYTHONPATH:~/cilantro
             export LOCAL_PATH=~
             python3.6 -m unittest $(circleci tests glob tests/unit/**/**/**/test_*.py | circleci tests split --split-by=timings)
+      - run:
+          mkdir -p unit-test-results
       - store_test_results:
           path: unit-test-results
 
