--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ aioprocessing==1.0.1
 coloredlogs
 Cython
 idna==2.6
+mysql-connector-python-rf==2.2.2
 ntplib==0.3.3
 pycapnp==0.6.3
 #PyNaCl==1.2.1
