--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,6 +18,12 @@ jobs:
             sudo rm /var/lib/apt/lists/lock /var/cache/apt/archives/lock /var/lib/dpkg/lock 2>/dev/null
             sudo dpkg --configure -a
             sudo apt install -y libmysqlclient-dev mysql-client
+
+      - run
+        name: Install mongodb
+        command: |
+          sudo apt-get install -y mongodb-org
+
       - run:
           name: Install Cilantro Requirements
           command: |
@@ -82,6 +88,12 @@ jobs:
           name: Install Mysql Client
           command: |
              sudo apt install -y mysql-client
+
+      - run
+          name: Install mongodb
+          command: |
+              sudo apt-get install -y mongodb-org
+
       - run:
           name: set temp credentials file (aka db config stuff)
           command: |
