--- a/testnet_configs/testnet.ini
+++ b/testnet_configs/testnet.ini
@@ -1,3 +1,3 @@
 [testnet]
-testnet_json_file_name = /Users/davishaba/Developer/cilantro/cilantro/../testnet_configs/2-2-4.json
+testnet_json_file_name = 4-4-4.json
 
