--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -55,8 +55,8 @@ jobs:
           command: |
             export PYTHONPATH=$PYTHONPATH:~/cilantro
             export LOCAL_PATH=~
-            python3.6 ~/cilantro/tests/integration/overlay/test_protocol.py
-#            python3.6 ~/cilantro/tests/run_tests.py --integration 1 --unit 0
+#            python3.6 ~/cilantro/tests/integration/overlay/test_protocol.py
+            python3.6 ~/cilantro/tests/run_tests.py --integration 1 --unit 0
 
   unit_tests:
     working_directory: ~/cilantro
