now we can run contracts in the new seneca

--- a/requirements.txt
+++ b/requirements.txt
@@ -21,5 +21,5 @@ yarl==1.1.0
 vprof
 docker
 dill
--e git://github.com/Lamden/vmnet.git#egg=vmnet
--e git://github.com/Lamden/seneca.git#egg=seneca
+vmnet
+-e git://github.com/Lamden/seneca.git@dev#egg=seneca
