--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,6 +13,12 @@ jobs:
           key: cilantro-{{ checksum "requirements.txt" }}-{{ checksum "dev-requirements.txt" }}-integration-0
       - run: pyenv local 3.6.5
       - run:
+        name: Install Redis
+        command: |
+            wget http://download.redis.io/releases/redis-4.0.6.tar.gz
+            tar xzf redis-4.0.6.tar.gz
+            cd redis-4.0.6 && make
+      - run:
           name: Install MySQL Client
           command: |
             sudo rm /var/lib/apt/lists/lock /var/cache/apt/archives/lock /var/lib/dpkg/lock 2>/dev/null
